[gd_scene load_steps=3 format=2]

[ext_resource path="res://ext/ext_comic_template/ext_main.gd" type="Script" id=1]
[ext_resource path="res://ext/ext_comic_template/comic.gd" type="Script" id=2]

[node name="ext_main" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -704.0
margin_bottom = -300.0
window_title = "Comic Template"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_ok" type="Button" parent="."]
margin_left = 176.0
margin_top = 192.0
margin_right = 240.0
margin_bottom = 224.0
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 16.0
margin_top = 160.0
margin_right = 240.0
margin_bottom = 176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_generate" type="Button" parent="."]
margin_left = 16.0
margin_top = 112.0
margin_right = 240.0
margin_bottom = 144.0
focus_mode = 0
enabled_focus_mode = 0
text = "Generate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paper_dpi" type="OptionButton" parent="."]
margin_left = 16.0
margin_top = 64.0
margin_right = 240.0
margin_bottom = 96.0
focus_mode = 0
enabled_focus_mode = 0
text = "150 dpi"
align = 1
items = [ "150 dpi", null, false, 0, null, "300 dpi", null, false, 1, null, "600dpi", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paper_size" type="OptionButton" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 240.0
margin_bottom = 48.0
focus_mode = 0
enabled_focus_mode = 0
text = "B5 (182 x 257)"
align = 1
items = [ "A4 (210 x 297)", null, true, 0, null, "B5 (182 x 257)", null, false, 1, null ]
selected = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
handle_input_locally = false
hdr = false
usage = 0
render_target_update_mode = 3

[node name="comic" type="Node2D" parent="ViewportContainer/Viewport"]
script = ExtResource( 2 )
[connection signal="pressed" from="btn_ok" to="." method="_on_btn_ok_pressed"]
[connection signal="pressed" from="btn_generate" to="." method="_on_btn_generate_pressed"]
[connection signal="item_selected" from="paper_dpi" to="." method="_on_paper_dpi_item_selected"]
